; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_if_stmt.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_if_stmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KELSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_if_stmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_if_stmt() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = call i32 @expect(i8 signext 40)
  %6 = call i32* (...) @read_boolean_expr()
  store i32* %6, i32** %2, align 8
  %7 = call i32 @expect(i8 signext 41)
  %8 = call i32* (...) @read_stmt()
  store i32* %8, i32** %3, align 8
  %9 = load i32, i32* @KELSE, align 4
  %10 = call i32 @next_token(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %0
  %13 = load i32*, i32** %2, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32* @ast_if(i32* %13, i32* %14, i32* null)
  store i32* %15, i32** %1, align 8
  br label %22

16:                                               ; preds = %0
  %17 = call i32* (...) @read_stmt()
  store i32* %17, i32** %4, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = load i32*, i32** %3, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = call i32* @ast_if(i32* %18, i32* %19, i32* %20)
  store i32* %21, i32** %1, align 8
  br label %22

22:                                               ; preds = %16, %12
  %23 = load i32*, i32** %1, align 8
  ret i32* %23
}

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32* @read_boolean_expr(...) #1

declare dso_local i32* @read_stmt(...) #1

declare dso_local i32 @next_token(i32) #1

declare dso_local i32* @ast_if(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
